# ego-test

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
scripts/: fetch_urdf.sh
src/egodex_robot/: __init__.py  cli.py  dataset.py  geometry.py  ik.py  pipeline.py  pose.py  viz.py
src/egodex_robot/stages/: __init__.py  grasp.py  graspgen.py  hamer.py  overlay.py  render.py  sam3d.py  segment.py
tests/: test_geometry.py  test_grasp_pose_overlay.py  test_ik_render.py  test_import_hygiene.py
