[project]
name = "egodex-robot"
version = "0.1.0"
description = "Retarget the EgoDex egocentric human-hand dataset onto a Mobile ALOHA bimanual parallel-gripper robot and overlay it on the original frame."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Core deps for the CPU-only stages (dataset load, viz, IK, render, overlay, grasp fallback).
dependencies = [
    "lerobot",            # LeRobotDataset loader for pepijn223/egodex-test
    "rerun-sdk>=0.29",    # 3-panel viz (3D scene + image streams); displays the overlay
    "numpy",
    "opencv-python",      # frame I/O + overlay compositing
    "huggingface-hub",    # dataset/asset download
    "typer>=0.12",        # CLI
    "scikit-learn",       # KMeans(2) contact-point clustering fallback for grasps
    "placo",              # full-arm IK/FK on the fl_/fr_ follower chains (single kinematics source)
    "pyrender",           # offscreen rasterisation of the posed robot (rerun cannot do this)
    "pyopengl>=3.1.5",    # OSMesa needs OSMesaCreateContextAttribs (absent in 3.1.0)
    "trimesh",            # load the URDF visual meshes for pyrender / rerun
    "pycollada",          # trimesh backend for the URDF's .dae meshes
]

# Headless rendering (the render/viz overlay): pyrender needs an offscreen GL context.
#   - EGL  (GPU): set PYOPENGL_PLATFORM=egl   (needs an EGL library)
#   - OSMesa (CPU): set PYOPENGL_PLATFORM=osmesa  (apt-get install libosmesa6 libosmesa6-dev)
# stages/render.py defaults PYOPENGL_PLATFORM to "osmesa" if it is unset.
# Alpha is taken from the depth buffer because the OSMesa backend does not honour pyrender's
# RGBA flag.

# GPU model stages as per-stage optional extras. Each is a SEPARATE install: HAMER,
# SAM-3D-Objects, GraspGen and SAM 2 have mutually conflicting torch/CUDA pins, so install
# only the one(s) you need into their own environment (do NOT `pip install '.[all-gpu]'`).
# These are best-effort: some sub-deps don't express as plain requirements (HAMER's
# third-party/ViTPose, detectron2 from git; SAM-3D's pytorch3d) and need the manual steps in
# AGENTS.md. The stage modules import their deps at module top -- importing a stage requires
# its extra; the CPU stages and `import egodex_robot` stay torch-free.
[project.optional-dependencies]
hamer = [
    "torch",
    "hamer @ git+https://github.com/geopavlakos/hamer",
    # also: `pip install -v -e third-party/ViTPose` and a detectron2 build; see AGENTS.md.
]
sam2 = [
    "torch",
    "sam2 @ git+https://github.com/facebookresearch/sam2",
]
sam3d = [
    "torch",
    "sam-3d-objects @ git+https://github.com/facebookresearch/sam-3d-objects",
    # also needs pytorch3d (see the repo's requirements.p3d.txt); checkpoints under checkpoints/hf/.
]
graspgen = [
    "torch",
    "graspgen @ git+https://github.com/NVlabs/GraspGen",
]

[project.scripts]
egodex = "egodex_robot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/egodex_robot"]
